[gd_scene load_steps=25 format=3 uid="uid://dvdqi36ijllx7"]

[ext_resource type="Script" path="res://scenes/components/objects/tree.gd" id="1_0v6jk"]
[ext_resource type="Shader" path="res://scenes/components/objects/outline.gdshader" id="1_a0ila"]
[ext_resource type="Script" path="res://scenes/components/objects/tree_damage_effects.gd" id="1_grhbh"]
[ext_resource type="Script" path="res://scripts/interactable.gd" id="1_xqub4"]
[ext_resource type="Script" path="res://scripts/health_manager.gd" id="2_jvvbe"]
[ext_resource type="AudioStream" uid="uid://gqjqdy0cptjj" path="res://assets/sounds/footsteps/Wood-01.ogg" id="5_vo40a"]
[ext_resource type="AudioStream" uid="uid://dxx4ohqkjrk64" path="res://assets/sounds/footsteps/Wood-02.ogg" id="6_q11ns"]
[ext_resource type="AudioStream" uid="uid://2feri5lf36pt" path="res://assets/sounds/footsteps/Wood-03.ogg" id="7_237dr"]
[ext_resource type="AudioStream" uid="uid://b57iutsjnvff8" path="res://assets/sounds/footsteps/Wood-04.ogg" id="8_quxuh"]
[ext_resource type="AudioStream" uid="uid://k4i0bjeredp8" path="res://assets/sounds/footsteps/Wood-05.ogg" id="9_eakq4"]
[ext_resource type="Script" path="res://scripts/damage_sounds.gd" id="10_stha5"]
[ext_resource type="Script" path="res://scripts/item_drops.gd" id="11_7a4en"]
[ext_resource type="Texture2D" uid="uid://dlhaaobibcvkg" path="res://assets/images/items/log.png" id="12_88qlt"]
[ext_resource type="PackedScene" uid="uid://52ogfp0xj6gt" path="res://scenes/components/effects/bacon.tscn" id="13_23483"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jvd7x"]
shader = ExtResource("1_a0ila")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="Curve" id="Curve_a1ag8"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.784314, 0.531915), 0.0, 0.0, 0, 0, Vector2(0.8, 0.808511), 0.0, 0.0, 0, 0, Vector2(1, 0.755319), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_oa775"]
colors = PackedColorArray(0.529336, 0.247724, 0.213697, 1, 0.594497, 0.409049, 0.256427, 1)

[sub_resource type="Curve" id="Curve_eemsi"]
_data = [Vector2(0, 1), 0.0, -0.284715, 0, 0, Vector2(0.231579, 0.934066), 0.0, 0.0, 0, 0, Vector2(1, 0.208791), -0.943851, 0.0, 1, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_xc6dt"]
offsets = PackedFloat32Array(0.326667, 1)
colors = PackedColorArray(0.25098, 0.627451, 0.376471, 1, 0.477491, 0.700667, 0.399268, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_08lsj"]
radius = 24.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vxxb0"]
random_pitch = 2.0
streams_count = 5
stream_0/stream = ExtResource("5_vo40a")
stream_1/stream = ExtResource("6_q11ns")
stream_2/stream = ExtResource("7_237dr")
stream_3/stream = ExtResource("8_quxuh")
stream_4/stream = ExtResource("9_eakq4")

[sub_resource type="Animation" id="Animation_xvkao"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ea60n"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.366667, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t70pt"]
_data = {
"RESET": SubResource("Animation_xvkao"),
"fade": SubResource("Animation_ea60n")
}

[node name="Tree" type="Area2D" groups=["objects"]]
modulate = Color(1, 0.42, 0.42, 1)
visibility_layer = 3
y_sort_enabled = true
script = ExtResource("1_grhbh")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite" type="Node2D" parent="." node_paths=PackedStringArray("health_manager")]
modulate = Color(1, 1, 1, 0)
visibility_layer = 2
material = SubResource("ShaderMaterial_jvd7x")
script = ExtResource("1_0v6jk")
leaf_count = 6
trunk_detail = 8
leaf_detail = 8
shadow_scale = 64.0
health_manager = NodePath("../Health Manager")
trunk_width_curve = SubResource("Curve_a1ag8")
trunk_gradient = SubResource("Gradient_oa775")
leaf_width_curve = SubResource("Curve_eemsi")
leaf_gradient = SubResource("Gradient_xc6dt")
trunk_length = 150.0
trunk_length_randomization = 0.81
leaf_length = 100.0
leaf_angle_falloff = 0.7
leaf_droop = 0.5
leaf_wind_strength = Vector2(16, 8)
leaf_stiffness = 140.0
leaf_drag = 6.0
trunk_stiffness = 120.0
trunk_drag = 2.0

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_08lsj")
script = ExtResource("1_xqub4")

[node name="Health Manager" type="Node2D" parent="."]
script = ExtResource("2_jvvbe")

[node name="On Hit" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_vxxb0")
max_distance = 500.0

[node name="Health Sounds" type="Node2D" parent="." node_paths=PackedStringArray("hit")]
script = ExtResource("10_stha5")
hit = NodePath("../On Hit")

[node name="Item Drops" type="Node2D" parent="."]
script = ExtResource("11_7a4en")
item_name = "log"

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-96, -250)
rect = Rect2(0, 0, 200, 300)

[node name="FadeIn" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t70pt")
}
autoplay = "fade"

[node name="ParticleEffect" parent="." instance=ExtResource("13_23483")]
top_level = true
amount = 16
speed_scale = 1.5
texture = ExtResource("12_88qlt")

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="on_interact" from="Collision" to="Health Manager" method="_on_interact"]
[connection signal="on_death" from="Health Manager" to="." method="_on_health_manager_on_death"]
[connection signal="on_death" from="Health Manager" to="Item Drops" method="_drop"]
[connection signal="on_hit" from="Health Manager" to="." method="_on_health_manager_on_hit"]
[connection signal="on_hit" from="Health Manager" to="Health Sounds" method="on_hit"]
